# Zappy

./: .gitignore  Makefile  README.md
GUI/: CMakeLists.txt  Makefile  Makefile_GUI.mk
GUI/include/: main.hpp
GUI/include/chessElement/: chessBoard.hpp  chessPiece.hpp
GUI/include/event/: eventHandler.hpp
GUI/include/game/: ZappyGame.hpp  game.hpp
GUI/include/objFile/: objLoader.hpp
GUI/include/player/: player.hpp  playerInventory.hpp  playerPosition.hpp  team.hpp
GUI/include/zappyIrrlicht/: irrlichtWindow.hpp
GUI/interface/: AError.hpp  IError.hpp
GUI/src/: main.cpp
GUI/src/chessElement/: chessBoard.cpp  chessBoard.hpp  chessPiece.cpp  chessPiece.hpp  tiles.cpp  tiles.hpp
GUI/src/core/: Core.cpp  Core.hpp
GUI/src/event/: eventHandler.cpp  irrlichtEventHandler.cpp  irrlichtEventHandler.hpp  serverDataReceiver.cpp  serverDataReceiver.hpp
GUI/src/game/: ZappyGame.cpp  ZappyGame.hpp  game.cpp
GUI/src/items/: items.cpp  items.hpp  tiles.cpp  tiles.hpp
GUI/src/loader/: objLoader.cpp  objLoader.hpp  textureLoader.cpp  textureLoader.hpp
GUI/src/networkGui/: guiClient.cpp  guiClient.hpp
GUI/src/objFile/: objLoader.cpp
GUI/src/player/: player.cpp  player.hpp  playerInventory.cpp  playerInventory.hpp  playerPosition.cpp  playerPosition.hpp  team.cpp  team.hpp
GUI/src/zappyIrrlicht/: irrlichtWindow.cpp  irrlichtWindow.hpp
Network/: CMakeLists.txt  Makefile_Network.mk
Network/Tests/src/: mainTest.c
Network/include/Admin/: admin.h  admin_function.h
Network/include/ClientList/: client_list.h
Network/include/ErrorHandling/: check_return_value.h
Network/include/Game/: command_with_args.h  game.h  game_command.h  game_functions.h
Network/include/GuiProtocol/: gui.h  gui_event.h
Network/include/Parsing/: args_flag.h  arguments_struct.h  parse_args.h
Network/include/Server/: game.h  server.h
Network/include/lib/: my.h
Network/src/: main.c
Network/src/Admin/: admin_command.c  admin_function.c  admin_function_bis.c  admin_time.c
Network/src/ClientList/: client_list.c  client_list_bis.c
Network/src/ErrorHandling/: check_return_value.c  return_error_str.c
Network/src/GUI/: game_info_cmd.c  player_info_cmd.c  time_cmd.c
Network/src/Game/: egg_hatching.c  eject_function.c  game_command.c  game_command_bis.c  game_command_ter.c  game_functions.c  game_tick.c  incantation.c  inventory_function.c  launch_broadcast.c  look_around.c  object_manipulation.c
Network/src/GuiProtocol/: game_info_cmd.c  gui_event.c  gui_event_bis.c  gui_event_quat.c  gui_event_quin.c  gui_event_ter.c  player_info_cmd.c  start_gui_client.c  time_cmd.c
Network/src/Parsing/: move_args_to_struct.c  parse_args.c
Network/src/Server/: complete_server.c  init_in_game_stuct.c  (+3 more)
(+31 files in other folders)
